kroki: Test `readOnlyRootFilesystem: false`

--- a/apps/kroki/values.yaml
+++ b/apps/kroki/values.yaml
@@ -22,7 +22,7 @@ app-template:
                 periodSeconds: 5
           securityContext:
             allowPrivilegeEscalation: false
-            readOnlyRootFilesystem: true
+            readOnlyRootFilesystem: false
             capabilities:
               drop:
                 - "ALL"
