renovate: Add pre-commmit suffix

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -26,6 +26,8 @@
   ],
   'pre-commit': {
     enabled: true,
+    commitMessagePrefix: 'pre-commit: ',
+    branchPrefix: 'pre-commit-',
   },
   configMigration: true,
   customManagers: [
