renovate: Re-add repositories config

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -15,6 +15,7 @@
   schedule: [
     'after 4am and before 10am on Monday',
   ],
+  repositories: ["pando85/homelab"],
   enabledManagers: [
     'argocd',
     'github-actions',
