--- a/system/monitoring/blackbox-exporter-values.yaml
+++ b/system/monitoring/blackbox-exporter-values.yaml
@@ -121,9 +121,9 @@ serviceMonitor:
     # - module: tcp_connect
     #   name: smart-plug-v2-terrace
     #   url: smart-plug-v2-terrace.iot.grigri:6053
-    - module: tcp_connect
-      name: lilygo-higrow-2
-      url: lilygo-higrow-2.iot.grigri:6053
+    # - module: tcp_connect
+    #   name: lilygo-higrow-2
+    #   url: lilygo-higrow-2.iot.grigri:6053
     # - module: tcp_connect
     #   name: lilygo-higrow-1
     #   url: lilygo-higrow-1.iot.grigri:6053
