argocd: Change to OIDC to PKCE

--- a/bootstrap/argocd/values.yaml
+++ b/bootstrap/argocd/values.yaml
@@ -21,7 +21,6 @@ argo-cd:
         name: idm.grigri.cloud
         issuer: https://idm.grigri.cloud/oauth2/openid/argocd
         clientID: $oidc.kanidm.clientID
-        clientSecret: $oidc.kanidm.clientSecret
 
         # Optional list of allowed aud claims. If omitted or empty, defaults to the clientID value above (and the
         # cliClientID, if that is also specified). If you specify a list and want the clientID to be allowed, you must
@@ -37,15 +36,7 @@ argo-cd:
 
         # Optional set of OIDC scopes to request. If omitted, defaults to: ["openid", "profile", "email", "groups"]
         requestedScopes: ["openid", "profile", "email"]
-        # PKCE not working, it is not sending the code_challenge
-        # to enable:
-        # ```bash
-        # kanidm system oauth2 delete argocd
-        # kanidm system oauth2 create argocd argocd  https://argocd.internal.grigri.cloud/pkce/verify -D admin
-        # kanidm system oauth2 update-scope-map argocd argocd-users openid profile email\n
-        # kanidm system oauth2 set-landing-url argocd 'https://argocd.internal.grigri.cloud/auth/login?return_url=https%3A%2F%2Fargocd.internal.grigri.cloud%2Fapplications'
-        # ```
-        # enablePKCEAuthentication: true
+        enablePKCEAuthentication: true
       # Disable git polling
       timeout.reconciliation: "0"
 
