--- a/apps/kroki/values.yaml
+++ b/apps/kroki/values.yaml
@@ -33,7 +33,7 @@ app-template:
               cpu: 10m
               memory: 128Mi
             limits:
-              cpu: 500m
+              cpu: 2
               memory: 1Gi
 
   defaultPodOptions:
