nginx: Increase annotation risk level to Critcial
controller-v1.12.0 sets default value to High which does not allow snippets

--- a/system/ingress-nginx/values.yaml
+++ b/system/ingress-nginx/values.yaml
@@ -16,6 +16,7 @@ ingress-nginx:
         proxy_cache_use_stale updating;
       use-forwarded-headers: true
       allow-snippet-annotations: true
+      annotations-risk-level: Critical
       enable-brotli: "true"
       brotli-level: "6"
       # Added text/html and application/vnd.api+json + default ones:
