nginx: Revert upgrade to 4.12.0
Until https://github.com/kubernetes/ingress-nginx/pull/12626 is released

--- a/system/ingress-nginx/values.yaml
+++ b/system/ingress-nginx/values.yaml
@@ -1,8 +1,7 @@
 ingress-nginx:
   controller:
     admissionWebhooks:
-      # This fix need to be applied: https://github.com/kubernetes/ingress-nginx/pull/12626
-      enabled: false
+      enabled: enable
       timeoutSeconds: 30
 
     replicaCount: 2
@@ -19,7 +18,6 @@ ingress-nginx:
       use-forwarded-headers: true
       allow-snippet-annotations: true
       annotations-risk-level: Critical
-      allow-cross-namespace-resources: "true"
       enable-brotli: "true"
       brotli-level: "6"
       # Added text/html and application/vnd.api+json + default ones:
