--- a/system/ingress-nginx/Chart.yaml
+++ b/system/ingress-nginx/Chart.yaml
@@ -3,5 +3,6 @@ name: ingress-nginx
 version: 0.0.0
 dependencies:
   - name: ingress-nginx
-    version: 4.12.0
+    # This fix need to be applied: https://github.com/kubernetes/ingress-nginx/pull/12626
+    version: 4.11.3
     repository: https://kubernetes.github.io/ingress-nginx
