qbittorrent: Reduce memory requested to 400Mi

--- a/apps/qbittorrent/values.yaml
+++ b/apps/qbittorrent/values.yaml
@@ -19,7 +19,7 @@ app-template:
           resources:
             requests:
               cpu: 330m
-              memory: 2Gi
+              memory: 400Mi
             limits:
               memory: 3.5Gi
 
