atuin: Fix service monitor label

--- a/apps/atuin/values.yaml
+++ b/apps/atuin/values.yaml
@@ -122,7 +122,10 @@ app-template:
 
   serviceMonitor:
     app:
+      enabled: true
       serviceName: atuin
+      labels:
+        release: monitoring
       endpoints:
         - port: metrics
           scheme: http
