navidrome: Increase memory limits

--- a/apps/navidrome/values.yaml
+++ b/apps/navidrome/values.yaml
@@ -31,7 +31,7 @@ app-template:
               cpu: 10m
               memory: 256Mi
             limits:
-              memory: 512Mi
+              memory: 2Gi
           probes:
             liveness:
               enabled: true
