velero: Add priority class to cross-backup jobs

--- a/platform/velero/templates/cross-backup-bis/cronjob.yaml
+++ b/platform/velero/templates/cross-backup-bis/cronjob.yaml
@@ -11,6 +11,7 @@ spec:
           annotations:
             kubernetes.io/egress-bandwidth: "200M"
         spec:
+          priorityClassName: high-priority
           containers:
           - name: rclone
             image: rclone/rclone:1.66.0
